force-app/main/default/objects/Contact/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>