force-app/main/default/objects/Contact/fields/Key_opinion_Leader__c.field-meta.xml
<CustomField>
    <fullName>Key_opinion_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Opinion Leader</label>
    <type>Checkbox</type>
</CustomField>