force-app/main/default/objects/Contact/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>