force-app/main/default/objects/Contact/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <label>Manager Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>