force-app/main/default/objects/Contact/listViews/SolM_Employees.listView-meta.xml
<ListView>
    <fullName>SolM_Employees</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>SOL M Internal employee</value>
    </filters>
    <label>SolM Employees</label>
</ListView>